# blanks

./: Blank_uml.srctrldb  Blank_uml.srctrlprj  CMakeLists.txt  main.cpp
docs/Doxygen/dpx/docbook/: _c_make_c_compiler_id_8c.xml  _c_make_c_compiler_id_8c_source.xml  _c_make_c_x_x_compiler_id_8cpp.xml  _c_make_c_x_x_compiler_id_8cpp_source.xml  _command_line_8cpp.xml  _command_line_8cpp__incl.md5  _command_line_8cpp_source.xml  _command_line_8h.xml  _command_line_8h__dep__incl.md5  _command_line_8h__incl.md5  _command_line_8h_source.xml  _encoding_converter_8cpp.xml  _encoding_converter_8cpp__incl.md5  _encoding_converter_8cpp_source.xml  _encoding_converter_8h.xml  _encoding_converter_8h__dep__incl.md5  _encoding_converter_8h__incl.md5  _encoding_converter_8h_source.xml  _file_reader_8cpp.xml  _file_reader_8cpp__incl.md5  _file_reader_8cpp_source.xml  _file_reader_8h.xml  _file_reader_8h__dep__incl.md5  _file_reader_8h__incl.md5  _file_reader_8h_source.xml  _generated_8cpp.xml  _generated_8cpp__incl.md5  _generated_8cpp_source.xml  _generated_8h.xml  _generated_8h__dep__incl.md5  _generated_8h__incl.md5  _generated_8h_source.xml  _line_8cpp.xml  _line_8cpp__incl.md5  _line_8cpp_source.xml  _parser_configuration_8cpp.xml  _parser_configuration_8cpp__incl.md5  _parser_configuration_8cpp_source.xml  _parser_configuration_8h.xml  _parser_configuration_8h__dep__incl.md5  (+188 more)
include/CommandLine/: CommandLine.h
include/Converting/: EncodingConverter.h
include/Parser/: ParserConfiguration.h  Plug.h  json.h
include/Reader/: FileReader.h  textReader.h
include/RenderPDF/: RenderPDF.h
include/struct/: cfm.h  nbr.h  point_data.h  tbl.h  zgt.h
src/CommandLine/: CommandLine.cpp
src/Converting/: EncodingConverter.cpp
src/Parser/: ParserConfiguration.cpp  json.cpp
src/Reader/: FileReader.cpp  textReader.cpp
src/RenderPDF/: Line.cpp  Print.cpp  Processor.cpp  RenderPDF.cpp  digit.cpp  draw.cpp
(+1088 files in other folders)
